--- a/index.css
+++ b/index.css
@@ -1,3 +1,70 @@
-body{width: 960px; margin: 0 auto; background-color: #b0c4de;}
-table{margin: 0 auto;}
-thead{height: 70px;}
+/* Reset CSS: from YUI2: Reset CSS */
+html{
+	color:#000;
+	background:#888; 
+	padding:20px 0;
+	font: 12px/18px "맑은 고딕", "Malgun Gothic", "굴림", "Gulim", Verdana, Arial, Tahoma;
+	}
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
+	margin:0;
+	padding:0;
+	}
+table {
+	border-collapse:collapse;
+	border-spacing:0;
+	}
+fieldset,img { 
+	border:0;
+	}	
+address,caption,cite,code,dfn,em,strong,th,var {
+	font-style:normal;
+	font-weight:normal;
+	}
+ol,ul {
+	list-style:none;
+	}
+caption,th {
+	text-align:left;
+	}
+h1,h2,h3,h4,h5,h6 {
+	font-size:100%;
+	font-weight:normal;
+	}
+q:before,q:after {
+	content:'';
+	}
+abbr,acronym { border:0;
+	}
+
+/*  Layout  */
+#wrap {width:960px; margin:0 auto; background-color:#555;}
+
+/*  Top  */
+#top {
+	width:960px; color:#eee;
+	padding:0 10px 15px 0;
+	text-align:right; font-weight:bold;
+}
+#top p {color:#eee; font-size:15px; padding:5px;}
+
+/*  header  */
+#header {
+	width:100%; height:135px; background-color:#03497d;
+	border-bottom:1px solid #999; border-radius:15px 15px 0 0;
+}
+#header_left {
+	float:left; width:500px; color:#fff; padding:10px;
+	height:115px;;
+}
+#header_left h1 {font-size:50px;}
+#header_left h2 {font-size:45px;}
+#header_right {
+	float:right;
+}
+#header h1 {
+	float:left; width:500px; color:#fff; padding:10px;
+	font-size:50px;
+}
+
+/*  footer  */
+#footer {background-color:#d5dde2; color:#888; text-align:center; padding:20px;}
