--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 /* Reset CSS: from YUI2: Reset CSS */
 html{
 	color:#000;
-	background:#888; 
+	background:#F2F2F2; 
 	padding:20px 0;
 	font: 12px/18px "맑은 고딕", "Malgun Gothic", "굴림", "Gulim", Verdana, Arial, Tahoma;
 	}
@@ -37,34 +37,83 @@ abbr,acronym { border:0;
 	}
 
 /*  Layout  */
-#wrap {width:960px; margin:0 auto; background-color:#555;}
+#wrap {width:960px; margin:0 auto; background-color:#F2F2F2;}
 
 /*  Top  */
 #top {
-	width:960px; color:#eee;
-	padding:0 10px 15px 0;
+	width:960px; padding:0 10px 15px 0;
 	text-align:right; font-weight:bold;
 }
-#top p {color:#eee; font-size:15px; padding:5px;}
+#top p {color:#000000; font-size:15px; padding:5px;}
 
 /*  header  */
 #header {
-	width:100%; height:135px; background-color:#03497d;
-	border-bottom:1px solid #999; border-radius:15px 15px 0 0;
+	width:100%; height:135px; background-color:#00EE00;
+	border-bottom:1px solid #999; border-radius:30px 30px 30px 30px;
 }
 #header_left {
-	float:left; width:500px; color:#fff; padding:10px;
-	height:115px;;
-}
-#header_left h1 {font-size:50px;}
-#header_left h2 {font-size:45px;}
+	float:left; width:500px; color:#fff; padding:50px 0 0 30px; font-size: 50px;}
+#header_left h1 {vertical-align:top; display:block; height:60px; font-size:50px;}
 #header_right {
+	padding:60px 30px 0 0;
 	float:right;
 }
-#header h1 {
-	float:left; width:500px; color:#fff; padding:10px;
-	font-size:50px;
+
+/*  search  */
+#search {
+	background:#fff url("images/search-bg.gif") no-repeat 2px center;
+	border:1px solid #000;
+	width:280px; font-size:14px; line-height:24px;
+	padding-left:20px; vertical-align:middle;
 }
+#search_button {
+	height:28px; font-size:14px; line-height:24px; padding:5px; vertical-align:middle;
+}
+
+/*  navigation  */
+#navbar {margin-top:20px; width:960px; height:60px;}
+#navbar ul {margin:0; padding:0;}
+#navbar ul li {float:left; padding:10px 0 0 0;}
+#navbar ul li a {
+	color:#fff; background-color:#00EE00;
+	display:block;
+	width:318px; margin-right:2px;
+	text-align:center;
+	text-decoration:none;
+	padding:10px 0;
+	font:bold 12px/30px Tahoma; font-size:20px;
+}
+#navbar ul li a.selected {background-color:green;}
+#navbar ul li a:hover {background-color:yellow;}
+
+/*  index1 content  */
+#content {
+	margin-top:50px; padding-left: 120px;
+	width:960px; height:450px;
+}
+#content p {font-size:40px; height:60px; margin-top:80px; font:bold;}
+
+/*  index2 content  */
+#content2 {
+	margin-top:50px; padding-left: 120px;
+	width:960px; height:450px;
+}
+#content2 table {font-size:14px; border-collapse:separate;}
+#content2 table tbody td {height:23px;}
+#imgcell {text-align:center;}
+.N_sub {height:52px; text-align:center;}
+.T_name {width:30px; text-align:center;}
+.sub {text-align:center;}
+#name {height:40px;}
+#date {width:140px;}
+
+/*  index3 content  */
+#content3 {
+	margin-top:50px; padding-left: 120px;
+	width:960px; height:450px;
+}
+#content3 form {font-size:15px; font:bold;}
+#content3 div {margin-top:20px;}
 
 /*  footer  */
 #footer {background-color:#d5dde2; color:#888; text-align:center; padding:20px;}
